Working on action menu

--- a/ZotPad/MainStoryboard_iPad.storyboard
+++ b/ZotPad/MainStoryboard_iPad.storyboard
@@ -273,13 +273,20 @@
                             <outlet property="delegate" destination="0zt-cp-Ihx" id="cKN-7a-ZKQ"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Item details" id="clQ-lV-4y4"/>
+                    <navigationItem key="navigationItem" title="Item details" id="clQ-lV-4y4">
+                        <barButtonItem key="rightBarButtonItem" enabled="NO" systemItem="action" id="ptY-bC-Aae">
+                            <connections>
+                                <action selector="actionButtonPressed:" destination="0zt-cp-Ihx" id="Zdu-XA-huL"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="actionButton" destination="ptY-bC-Aae" id="WxY-ZQ-FU3"/>
                         <outlet property="view" destination="Qr8-AN-SJ9" id="ogI-Fb-On2"/>
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1360" y="686"/>
+            <point key="canvasLocation" x="1346" y="686"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="18">
@@ -493,11 +500,11 @@
             </objects>
             <point key="canvasLocation" x="-390" y="686"/>
         </scene>
-        <!--Attachment Preview View Controller-->
+        <!--Attachment Icon View Controller-->
         <scene sceneID="m4K-Ef-P1K">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vjE-A3-P4F" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController storyboardIdentifier="AttachmentPreview" autoresizesArchivedViewToFullSize="NO" id="tNV-Nk-F0U" customClass="ZPAttachmentPreviewViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AttachmentPreview" autoresizesArchivedViewToFullSize="NO" id="tNV-Nk-F0U" customClass="ZPAttachmentIconViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Fhs-Fk-8x7">
                         <rect key="frame" x="0.0" y="0.0" width="423" height="580"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -510,8 +517,8 @@
                                 <rect key="frame" x="40" y="176" width="343" height="217"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="163-aG-rbL">
-                                        <rect key="frame" x="20" y="157" width="303" height="23"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="left" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="12" id="163-aG-rbL">
+                                        <rect key="frame" x="20" y="144" width="303" height="23"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -525,9 +532,16 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <progressView hidden="YES" opaque="NO" tag="3" contentMode="scaleToFill" progress="0.5" id="gBo-F3-4IU">
-                                        <rect key="frame" x="20" y="188" width="303" height="9"/>
+                                        <rect key="frame" x="20" y="171" width="303" height="9"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </progressView>
+                                    <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="10" id="95I-iY-8Fg">
+                                        <rect key="frame" x="20" y="168" width="303" height="49"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                             </view>
@@ -541,6 +555,7 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="downloadLabel" destination="163-aG-rbL" id="yK6-av-RDq"/>
+                        <outlet property="errorLabel" destination="95I-iY-8Fg" id="qPh-Ao-aTy"/>
                         <outlet property="fileImage" destination="8bf-HZ-Xgb" id="dGJ-wA-wh8"/>
                         <outlet property="labelBackground" destination="6L9-7Q-tiU" id="PEM-um-UDX"/>
                         <outlet property="progressView" destination="gBo-F3-4IU" id="Xzj-xz-4yy"/>
@@ -558,45 +573,12 @@
                 <relationship kind="outlet" name="delegate"/>
             </relationships>
         </class>
-        <class className="ZPAttachmentPreviewViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPAttachmentPreviewViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="cancelButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="downloadLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="fileImage" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="labelBackground" candidateClass="UIView"/>
-                <relationship kind="outlet" name="progressView" candidateClass="UIProgressView"/>
-                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="ZPAuthenticationDialog" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPAuthenticationDialog.h"/>
-            <relationships>
-                <relationship kind="action" name="loadFirstPage:"/>
-                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
-            </relationships>
-        </class>
-        <class className="ZPFileImportViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPFileImportViewController.h"/>
-        </class>
         <class className="ZPItemDetailViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPItemDetailViewController.h"/>
-        </class>
-        <class className="ZPItemListViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPItemListViewController.h"/>
             <relationships>
-                <relationship kind="action" name="attachmentThumbnailPressed:"/>
-                <relationship kind="action" name="sortButtonPressed:"/>
-                <relationship kind="outlet" name="searchBar" candidateClass="UISearchBar"/>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="toolBar" candidateClass="UIToolbar"/>
+                <relationship kind="action" name="actionButtonPressed:"/>
+                <relationship kind="outlet" name="actionButton" candidateClass="UIBarButtonItem"/>
             </relationships>
-        </class>
-        <class className="ZPLibraryAndCollectionListViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPLibraryAndCollectionListViewController.h"/>
-        </class>
-        <class className="ZPSplitViewController" superclassName="UISplitViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPSplitViewController.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
